# minimap2-pure-rs-simd

./: Cargo.toml
src/: bseq.rs  sketch.rs
